force-app/main/default/objects/Activity/fields/Logged_via_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>Logged_via_Agentforce__c</fullName>
    <description>Set to true when this activity was created by the POH Sales Agent Post_Call_Logger. Used for success-metrics reporting.</description>
    <defaultValue>false</defaultValue>
    <label>Logged via Agentforce</label>
    <type>Checkbox</type>
</CustomField>