force-app/main/default/objects/Activity/fields/Samples_Left_Summary__c.field-meta.xml
<CustomField>
    <fullName>Samples_Left_Summary__c</fullName>
    <description>One-line summary of samples left during this visit (e.g., "12 tubes Crest Gum Detoxify"). Quick-read for the next rep who reviews this event.</description>
    <label>Samples Left Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>