force-app/main/default/objects/Activity/fields/Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes__c</fullName>
    <description>Full narrative notes captured by the rep during or after the sales call. Populated by the Post_Call_Logger agent and surfaced in the pre-call brief via GetVisitHistory.</description>
    <label>Visit Notes</label>
    <type>TextArea</type>
</CustomField>